# simple-shop-backend

./: .env.example  Cargo.toml  README.md  docker-compose.yaml
src/: lib.rs  main.rs
src/config/: app.rs  db.rs  log.rs  mod.rs
src/db/: mod.rs
src/db/repository/: mod.rs  users.rs
src/models/: user.rs
src/utils/: datetime.rs  env.rs  error.rs  mod.rs
