[package]
name = "simple-shop-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
async-trait = "0.1.89"
chrono = "0.4.42"
derive_more = "2.0.1"
dotenvy = "0.15.7"
env_logger = "0.11.8"
humantime = "2.3.0"
log = "0.4.29"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["derive", "postgres", "runtime-tokio", "macros", "migrate", "chrono"] }
tokio = {version = "1.48.0", features = ["full"]}
